--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,12 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.1",
     "@mui/x-data-grid": "^7.24.1",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
@@ -24,6 +28,8 @@
     "react-redux": "^9.2.0",
     "recharts": "^2.15.0",
     "redux-persist": "^6.0.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
