--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,7 @@
     "dotenv": "^16.4.7",
     "framer-motion": "^12.4.1",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
+    "next": "^15.1.7",
     "numeral": "^2.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
